--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "styled-components": "^2.1.2"
+    "styled-components": "^2.1.2",
+    "redux-saga": "^0.16.0"
   },
   "devDependencies": {
     "axios": "^0.17.1",
     "babel-jest": "20.0.3",
-    "babel-preset-react-native": "^2.1.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-react-native": "^2.0.0",
     "frisbee": "^1.6.4",
     "i18n-js": "^3.0.1",
     "install": "^0.10.4",
