--- a/package.json
+++ b/package.json
@@ -27,9 +27,15 @@
   },
   "devDependencies": {
     "axios": "^0.17.1",
+    "babel-eslint": "^8.2.2",
     "babel-jest": "20.0.3",
     "babel-polyfill": "^6.26.0",
     "babel-preset-react-native": "^2.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "frisbee": "^1.6.4",
     "i18n-js": "^3.0.1",
     "install": "^0.10.4",
