--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "adb": "^0.2.0",
@@ -33,18 +34,27 @@
     "babel-preset-react-native": "^2.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
     "frisbee": "^1.6.4",
+    "husky": "^0.14.3",
     "i18n-js": "^3.0.1",
     "install": "^0.10.4",
     "jest": "20.0.4",
+    "lint-staged": "^7.0.4",
     "npm": "^5.6.0",
+    "prettier": "^1.11.1",
     "react-test-renderer": "16.0.0-alpha.12",
     "xmlhttprequest": "^1.8.0"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": ["eslint --fix", "git add"],
+    "*.{json,md,scss}": ["prettier --write", "git add"]
   }
 }
