--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "prettier": "prettier --write",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "ios": "react-native run-ios",
+    "android": "react-native run-android"
   },
   "dependencies": {
     "adb": "^0.2.0",
