--- a/package.json
+++ b/package.json
@@ -58,6 +58,6 @@
   },
   "lint-staged": {
     "*.{js,jsx}": ["eslint --fix", "git add"],
-    "*.{json,md,scss}": ["prettier --write", "git add"]
+    "*.{json,md}": ["prettier --write", "git add"]
   }
 }
