react native crashlytics added

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "^0.50.3",
     "react-native-button": "1.2.0",
     "react-native-cookies": "2.0.0",
+    "react-native-fabric": "^0.5.1",
     "react-native-gifted-listview": "0.0.15",
     "react-native-i18n": "^2.0.6",
     "react-native-navbar": "^2.0.1",
