--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -133,6 +133,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fabric')
     compile project(':react-native-i18n')
     compile project(':react-native-cookies')
     compile fileTree(dir: "libs", include: ["*.jar"])
