--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'rn_poc'
+include ':react-native-fabric'
+project(':react-native-fabric').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fabric/android')
 include ':react-native-i18n-complete'
 project(':react-native-i18n-complete').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-i18n-complete/android')
 include ':react-native-i18n'
