--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,6 +18,10 @@ allprojects {
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
+            
+        }
+        maven{
+            url "https://maven.fabric.io/public"
         }
     }
 }
