--- a/.eslintrc
+++ b/.eslintrc
@@ -8,10 +8,26 @@
     "prettier",
     "react",
     "jsx-a11y",
-    "import"
+    "import",
+    "jest"
   ],
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "no-use-before-define": 0
+    "no-use-before-define": 0,
+    "class-methods-use-this":0,
+    "jest/no-disabled-tests": "warn",
+    "jest/no-focused-tests": "error",
+    "jest/no-identical-title": "error",
+    "jest/prefer-to-have-length": "warn",
+    "jest/valid-expect": "error"
+  },
+  "overrides": [{
+    "files": [ "*.spec.js" ],
+    "rules": {
+      "no-unused-expressions": 0
+    }
+  }],
+  "env": {
+    "jest/globals": true
   }
 }
