--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,8 @@
     "jest/no-focused-tests": "error",
     "jest/no-identical-title": "error",
     "jest/prefer-to-have-length": "warn",
-    "jest/valid-expect": "error"
+    "jest/valid-expect": "error",
+    "react/prop-types": ["error", { "ignore": ["navigation"] }]
   },
   "overrides": [{
     "files": [ "*.spec.js" ],
